fixed font size (was too big)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,16 +73,16 @@
   color: white;
   padding: 30px 40px;
   width: 40vw;
+  max-width: 400px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   font-weight: bold;
   margin: 4px 8px;
   cursor: pointer;
   box-shadow: black 0px 0px 10px;
   border-radius: 10px;
-  font-size: 3vw;
+  font-size: 1em;
   margin-bottom: 20px;
 }
 
